# web3_babyjubjub_sdk

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/web3_babyjubjub_sdk/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  simple.rs
rust/src/api/eddsa/: mod.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_web3_babyjubjub_sdk.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_web3_babyjubjub_sdk.podspec
rust_builder/windows/: CMakeLists.txt
