[package]
name = "rust_lib_web3_babyjubjub_sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.36"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
rand6 = {package="rand", version="0.6.5"}
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["rand"]}
num-traits = "0.2.8"
blake = "2.0.1"
generic-array = "0.13.2"
tiny-keccak = "1.5"
rustc-hex = "1.0.0"
poseidon-rs = "0.0.8"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

## Profiles
[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
lto = true